syntax = "proto3";

package zrime;

// pose
message ZPosition {
	float x = 1;
	float y = 2;
	float z = 3;
}
message ZRotation {
	float eulerX = 1;
	float eulerY = 2;
	float eulerZ = 3;
	
}

message Player {
	string player_id = 1;
	string player_name = 2;
	bool isHouseOwner = 3;
	ZPosition position = 4;
	ZRotation rotation = 5;
	string extraContent = 6;
}