syntax = "proto3";

package zrime;

import "player.proto";

service Exhibit{
	
	// 加入房间
	rpc Join(JoinRequest) returns (JoinResponse) {}
	
	// 同步位置
	rpc SyncPose(SyncRequest) returns (SyncResponse) {}
	
	// 离开房间
	rpc Leave(LeaveRequest) returns (LeaveResponse) {}
	
	// 创建Stream 并绑定
	rpc CreateStream(Connect) returns (stream Message);
	
	// 广播消息
	rpc BroadcastMessage(Message) returns (Close);
}

message JoinRequest {
	string room_id = 1;
}
message JoinResponse {
	string player_id = 1;
}

message SyncRequest {
	string room_id = 1;
	Player player= 2;
}
message SyncResponse {
	// 类似数组，可以反复引用
	repeated Player players = 1;
}

message LeaveRequest {
	string room_id = 1;
	string player_id = 2;
}
message LeaveResponse {}

message Connect {
	Player player = 1;
	bool active = 2;
	string deviceType = 3;
}

// 消息协议
message Message {
	string player_id = 1;
	string contentType = 2;
	string content = 3;
	string timestamp = 4;
}
message Close {}


